# fortran-distance-module

./: .gitignore  CMakeLists.txt  Makefile  README.md  mpi_main  my_program
cmake/modules/: findFFTW.cmake
oldsrc/: mpi_distance_module.f90  mpi_main.f90  old_cell_list_distance.f90
src/: CMakeLists.txt  cell_list_distance.f90  distance_module.f90  efield_main.f90  linked-list.f90  linked_lists_module.f90  main.f90  mpi_distance_module.f90  spectroscopy.f90  template_subroutine.f90  test_main.f90  testing.f90  testing_module.f90
src/coordinates/: CMakeLists.txt  coordinate_generator.f90  coordinates_module.f90  read_next.f90  read_xyz.f90
src/distances/: CMakeLists.txt  distance_module.f90  double_loop_distance.f90  functions.f90
src/efield_utilities/: CmakeLists.txt  calculate_field.f90  efield_module.f90  pick_subset.f90  read_efield_input.f90  read_field.f90  read_osc_bonds.f90  utilities.f90  write_field.f90
src/energy/: CMakeLists.txt  coulomb.f90  energy_module.f90  ewald.f90  mesh.f90
src/linked_lists/: CMakeLists.txt  assign_to_grid.f90  build_linked_list.f90  cell_internal_distance.f90  cell_list_distance.f90  linked_lists_module.f90  setup_cell_grid.f90
src/spec_utilities/: CmakeLists.txt  frequency_map.f90  ir_spectra.f90  ir_tcf.f90  read_spectra_input.f90  spectra_module.f90
src/testing/: CMakeLists.txt  csr_writer.f90  testing_module.f90  timing_comparison.f90  unit_testing.f90
test_files/: field.inp  temp.xtc  test.xyz  test_input.inp  test_one.xyz
tools/: check_output.py  check_vals.py  grab_charges.py  grab_frames.py  plot_scaling.ipynb  test_distances.py
